--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><b>Felipe</b></a>
+            <a class="navbar-brand" href="#"><img src="./img/favicon-32x32.png" alt="Logotipo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -23,16 +23,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#">Início</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
+                        <a class="nav-link" href="#">Contato</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Pricing</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled">Disabled</a>
                     </li>
                 </ul>
             </div>
@@ -40,8 +37,13 @@
     </nav>
     <div class="container">
         <div class="row">
-            <div class="col-md-12 bg-light">
-                teste
+            <div class="col-md-6" id="apresentation">
+                <b class="fs-1">Felipe Oliveira</b>
+                <br>
+                <span class="post fs-4">Desenvolvedor</span>
+            </div>
+            <div class="col-md-6 text-center">
+                <img id="my-image" src="./img/Fotor_AI.png" alt="" srcset="">
             </div>
         </div>
     </div>
