Adicionando: novos elementos html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img src="./img/favicon-32x32.png" alt="Logotipo"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -35,12 +35,29 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6" id="apresentation">
-                <b class="fs-1">Felipe Oliveira</b>
+                <b class="title">FELIPE OLIVEIRA</b>
                 <br>
-                <span class="post fs-4">Desenvolvedor</span>
+                <span class="post fs-5">Front-end developer</span>
+                <br>
+                <div class="btn-group btn-group-lg mt-4" role="group" aria-label="Large button group">
+                    <a href="https://github.com/Flipe124" type="button" class="btn btn-outline-dark">Github</a>
+                    <a href="https://www.linkedin.com/in/felipe-oliveira-dos-santos-morais-a016991b9/" type="button" class="btn btn-outline-dark">Linkedin</a>
+                </div>
             </div>
             <div class="col-md-6 text-center">
                 <img id="my-image" src="./img/Fotor_AI.png" alt="" srcset="">
+            </div>
+            <div class="col-md-12 text-center mt-5 color-darkk">
+                <b class="fs-2">Projetos</b>
+                <hr>
+                <p class="fw-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem perspiciatis
+                    inventore, quos, magnam reprehenderit odit molestiae ea, quisquam eveniet et incidunt repudiandae
+                    eligendi perferendis? Ratione necessitatibus rem amet cum culpa.</p>
+            </div>
+            <div class="col-md-3 mt-3">
+                <div class="card-project">
+                    <img src="./img/Screenshot_2.png" alt="" srcset="">
+                </div>
             </div>
         </div>
     </div>
