--- a/index.html
+++ b/index.html
@@ -7,103 +7,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio | Felipe Oliveira</title>
     <link rel="shortcut  icon" type="imagem/png" href="./img/favicon-32x32.png" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/navbar.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg">
-        <div class="container">
-            <a class="navbar-brand" href="#"><img src="./img/favicon-32x32.png" alt="Logotipo"></a>
-            <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Início</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contato">Contato</a>
-                    </li>
-                </ul>
+    <header>
+        <nav class="bg-darkk">
+            <a class="logo" href="#">&#60;FOMS/&#62;</a>
+            <div class="mobile-menu">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
             </div>
-        </div>
-    </nav>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6" id="apresentation">
-                <b class="title">FELIPE OLIVEIRA</b>
-                <br>
-                <span class="post fs-5">Front-end developer</span>
-                <br>
-                <div class="tools mt-3 mb-3">
-                    <i width="100px" class="fa-brands fa-html5"></i>
-                    <i class="fa-brands fa-css3-alt"></i>
-                    <i class="fa-brands fa-js"></i>
-                    <i class="fa-brands fa-bootstrap"></i>
-                    <i class="fa-brands fa-figma"></i>
+            <ul class="nav-list">
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Contatos</a></li>
+                <li><a href="#">Projetos</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <!-- <div class="container">
+            <div class="test-bg">
+                <div class="left">
+                    <p>Olá, me chamo</p>
+                    <p class="f-size-20">Felipe Oliveira</p>
                 </div>
-                <div class="about-me">
-                    <p>Olá me chamo Felipe e sou apaixonado por tecnologia, meu primeiro contato com programação foi em
-                        2020, quando iniciei o curso de análise e desenvolvimento de sistemas, onde senti uma maior
-                        afinidade pelo front-end.</p>
-                </div>
-                <!-- <div class="btn-group btn-group-lg mt-4" role="group" aria-label="Large button group">
-                    <a href="https://github.com/Flipe124" type="button" class="btn btn-outline-dark">Github</a>
-                    <a href="https://www.linkedin.com/in/felipe-oliveira-dos-santos-morais-a016991b9/" type="button"
-                        class="btn btn-outline-dark">Linkedin</a>
-                </div> -->
-            </div>
-            <div class="col-md-6 text-center class mb-5">
-                <img id="my-image" src="./img/158574715_3087438091577078_1349648941000276823_n.jpg" alt="" srcset="">
-            </div>    
-            <div class="col-md-12">
-                <div class="text-center">
-                    <a href="#about-me">
-                        <img id="scroll-animation" class="" src="./img/scrolldown.gif" alt="" srcset=""></img>
-                    </a>
+                <div class="right">
+                    <div>
+                        <img id="my-image" src="./img/3d-web-developer-working-on-project-illustration-png.png" alt=""
+                            srcset="">
+                    </div>
                 </div>
             </div>
-            <div class="col-md-12 text-center color-darkk" id="about-me">
-                <b class="text-center fs-2">Sobre min</b>
-                <p>Olá me chamo Felipe e sou apaixonado por tecnologia, meu primeiro contato com programação foi em
-                    2020, quando iniciei o curso de análise e desenvolvimento de sistemas</p>
-            </div>
-            <div class="col-md-12 text-center mt-5 color-darkk">
-                <b class="fs-2">Projetos</b>
-                <hr>
-                <p class="fw-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem perspiciatis
-                    inventore, quos, magnam reprehenderit odit molestiae ea, quisquam eveniet et incidunt repudiandae
-                    eligendi perferendis? Ratione necessitatibus rem amet cum culpa.</p>
-            </div>
-            <div class="col-md-4 mt-3 text-center">
-                <div class="card-project">
-                    <!-- <img src="./img/Screenshot_2.png" alt="" srcset=""> -->
-                </div>
-            </div>
-            <div class="col-md-4 mt-3 text-center">
-                <div class="card-project">
-                </div>
-            </div>
-            <div class="col-md-4 mt-3 text-center">
-                <div class="card-project">
-                </div>
-            </div>
-            <div class="col-md-12" id="contato">
-                <p>Contato</p>
-            </div>
-        </div>
-    </div>
+        </div> -->
+    </main>
+
+    <script src="./script/navbar.js"></script>
+    <script src="https://kit.fontawesome.com/1abad94d22.js" crossorigin="anonymous"></script>
 
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-    crossorigin="anonymous"></script>
-<script src="script.js"></script>
-
-<script src="https://kit.fontawesome.com/1abad94d22.js" crossorigin="anonymous"></script>
-
 </html>
