--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav class="bg-darkk">
-            <a class="logo" href="#">&#60;FOMS/&#62;</a>
+            <a class="logo" href="#">&#60;FOSM/&#62;</a>
             <div class="mobile-menu">
                 <div class="line1"></div>
                 <div class="line2"></div>
