Adicionando: importação de css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Portfólio | Felipe Oliveira</title>
     <link rel="shortcut  icon" type="imagem/png" href="./img/favicon-32x32.png" />
     <link rel="stylesheet" href="./css/navbar.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
