--- a/index.html
+++ b/index.html
@@ -7,46 +7,118 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio | Felipe Oliveira</title>
     <link rel="shortcut  icon" type="imagem/png" href="./img/favicon-32x32.png" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/navbar.css">
     <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
     <header>
-        <nav class="bg-darkk">
-            <a class="logo" href="#">&#60;FOSM/&#62;</a>
-            <div class="mobile-menu">
-                <div class="line1"></div>
-                <div class="line2"></div>
-                <div class="line3"></div>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">FOSM</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavDropdown" aria-expanded="false">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Início</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Sobre</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contatos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Projetos</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <ul class="nav-list">
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Contatos</a></li>
-                <li><a href="#">Projetos</a></li>
-            </ul>
         </nav>
     </header>
     <main>
-        <!-- <div class="container">
-            <div class="test-bg">
-                <div class="left">
-                    <p>Olá, me chamo</p>
-                    <p class="f-size-20">Felipe Oliveira</p>
-                </div>
-                <div class="right">
-                    <div>
-                        <img id="my-image" src="./img/3d-web-developer-working-on-project-illustration-png.png" alt=""
-                            srcset="">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="">
+                        <p class="fs-4">- OLÁ</p>
+                        <p class="fs-1">Me chamo <b class="text-danger">Felipe</b> Oliveira</p>
+                        <p class="fs-6">Sou desenvolvedor web, me formei em análise e desenvolvimento de sistemas na
+                            UMFG (2023).</p>
                     </div>
                 </div>
+                <div class="col-md-6">
+                    <div class="text-center">
+                        <img id="my-image" src="./img/3d-web-developer-working-on-project-illustration-png.png">
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <h3 class="text-center">Projetos</h3>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="card" style="width: 18rem;">
+                                <img src="./img/Interface_lambda.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Lambda</h5>
+                                    <p class="card-text">Lambda com acesso a API do github.</p>
+                                    <a href="https://github.com/Flipe124/atividade-lambda" class="btn btn-primary">Acessar</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="card" style="width: 18rem;">
+                                <img src="./img/Interface_lambda.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Lambda</h5>
+                                    <p class="card-text">Lambda com acesso a API do github.</p>
+                                    <a href="https://github.com/Flipe124/atividade-lambda" class="btn btn-primary">Acessar</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="card" style="width: 18rem;">
+                                <img src="./img/Interface_lambda.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Lambda</h5>
+                                    <p class="card-text">Lambda com acesso a API do github.</p>
+                                    <a href="https://github.com/Flipe124/atividade-lambda" class="btn btn-primary">Acessar</a>
+                                </div>
+                            </div>
+                        </div>    
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <h3 class="text-center">Social</h3>
+                    <div class="text-center mt-3">
+                        <a class="p-2"
+                            href="https://www.linkedin.com/in/felipe-oliveira-dos-santos-morais-a016991b9/"><i
+                                class="fa-brands fa-linkedin fs-1"></i></a>
+                        <a class="p-2" href="https://github.com/Flipe124"><i
+                                class="fa-brands fa-github text-dark fs-1"></i></a>
+                        <a class="p-2" href="https://gitlab.com/Flipe124"><i
+                                class="fa-brands fa-gitlab text-warning fs-1"></i></a>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi dolorum molestias, dolore est totam
+                    magnam beatae numquam cupiditate expedita praesentium esse, modi nam amet in doloremque, placeat
+                    iure natus tempore?
+                </div>
             </div>
-        </div> -->
+        </div>
     </main>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
     <script src="./script/navbar.js"></script>
     <script src="https://kit.fontawesome.com/1abad94d22.js" crossorigin="anonymous"></script>
 
 </body>
+
 </html>
