--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/navbar.css">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/apresentation.css">
+    <link rel="stylesheet" href="./css/project.css">
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary" style="padding-right: 7%; padding-left: 7%;">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">FOSM</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -34,7 +36,7 @@
                             <a class="nav-link" href="#">Contatos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Projetos</a>
+                            <a class="nav-link" href="#project">Projetos</a>
                         </li>
                     </ul>
                 </div>
@@ -42,7 +44,47 @@
         </nav>
     </header>
     <main>
-        <div class="container">
+        <section class="apresentation my-padding">
+            <div class="half mt-5">
+                <b class="fs-2">Desenvolvedor frontend</b>
+                <p class="fs-6">Olá, me chamo Felipe Oliveira sou formado em análise e desenvolvimento de sistemas UMFG (2023).</p>
+                <div class="social">
+                    <a href="https://www.linkedin.com/in/felipe-oliveira-dos-santos-morais-a016991b9/">
+                        <i class="fa-brands fa-linkedin" title="Linkedin"></i>
+                    </a>
+                    <a href="https://github.com/Flipe124">
+                        <i class="fa-brands fa-github" title="Github"></i>
+                    </a>
+                    <a href="https://gitlab.com/Flipe124">
+                        <i class="fa-brands fa-gitlab" title="Gitlab"></i>
+                    </a>
+                </div>
+                <!-- <button class="btn btn-success"><b>BAIXAR CV</b></button> -->
+            </div>
+            <div class="half">
+                <div class="text-center flutuar">
+                    <img id="my-image" src="./img/foto_perfil.jpg">
+                </div>
+            </div>
+            <div class="skill">
+                <i class="fa-brands fa-html5" title="HTML5"></i>
+                <i class="fa-brands fa-css3-alt" title="CSS3"></i>
+                <i class="fa-brands fa-square-js" title="Javascript"></i>
+                <i class="fa-brands fa-bootstrap" title="Bootstrap"></i>
+                <i class="fas fa-cogs" title="Jquery"></i>
+            </div>
+        </section>
+        <!-- <section class="apresentation bg-success">
+            <div class="half">
+                <p class="fs-4">- OLÁ</p>
+                <p class="fs-1">Me chamo <b class="text-danger">Felipe</b> Oliveira</p>
+                <p class="fs-6">Sou desenvolvedor web, me formei em análise e desenvolvimento de sistemas na
+                    UMFG (2023).</p>
+                <button class="btn btn-success"><b>BAIXAR CV</b></button>
+            </div>
+        </section> -->
+
+        <!-- <div class="container bg-danger">
             <div class="row">
                 <div class="col-md-6">
                     <div class="">
@@ -50,46 +92,27 @@
                         <p class="fs-1">Me chamo <b class="text-danger">Felipe</b> Oliveira</p>
                         <p class="fs-6">Sou desenvolvedor web, me formei em análise e desenvolvimento de sistemas na
                             UMFG (2023).</p>
+                        <button class="btn btn-success"><b>BAIXAR CV</b></button>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="text-center">
-                        <img id="my-image" src="./img/3d-web-developer-working-on-project-illustration-png.png">
+                        <img id="my-image" src="./img/foto_perfil.jpg">
                     </div>
                 </div>
-                <div class="col-md-12">
+                <div class="col-md-12" id="project">
                     <h3 class="text-center">Projetos</h3>
-                    <div class="row">
-                        <div class="col-md-4">
-                            <div class="card" style="width: 18rem;">
-                                <img src="./img/Interface_lambda.png" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">Lambda</h5>
-                                    <p class="card-text">Lambda com acesso a API do github.</p>
-                                    <a href="https://github.com/Flipe124/atividade-lambda" class="btn btn-primary">Acessar</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="card" style="width: 18rem;">
-                                <img src="./img/Interface_lambda.png" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">Lambda</h5>
-                                    <p class="card-text">Lambda com acesso a API do github.</p>
-                                    <a href="https://github.com/Flipe124/atividade-lambda" class="btn btn-primary">Acessar</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="card" style="width: 18rem;">
-                                <img src="./img/Interface_lambda.png" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">Lambda</h5>
-                                    <p class="card-text">Lambda com acesso a API do github.</p>
-                                    <a href="https://github.com/Flipe124/atividade-lambda" class="btn btn-primary">Acessar</a>
-                                </div>
-                            </div>
-                        </div>    
+                    <div class="card-project">
+                        teste1
+                    </div>
+                    <div class="card-project">
+                        teste2
+                    </div>
+                    <div class="card-project">
+                        teste3
+                    </div>
+                    <div class="card-project">
+                        teste3
                     </div>
                 </div>
                 <div class="col-md-12">
@@ -111,13 +134,13 @@
                 </div>
             </div>
         </div>
-    </main>
+    </main> -->
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-        crossorigin="anonymous"></script>
-    <script src="./script/navbar.js"></script>
-    <script src="https://kit.fontawesome.com/1abad94d22.js" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+            crossorigin="anonymous"></script>
+        <script src="./script/navbar.js"></script>
+        <script src="https://kit.fontawesome.com/1abad94d22.js" crossorigin="anonymous"></script>
 
 </body>
 
