feat: adicionando atributo target="_blank" aos links dá página

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
                 <b class="fs-2">Desenvolvedor frontend</b>
                 <p class="fs-6">Olá, me chamo Felipe Oliveira sou formado em análise e desenvolvimento de sistemas UMFG (2023).</p>
                 <div class="social">
-                    <a href="https://www.linkedin.com/in/felipe-oliveira-dos-santos-morais-a016991b9/">
+                    <a href="https://www.linkedin.com/in/felipe-oliveira-dos-santos-morais-a016991b9/" target="_blank">
                         <i class="fa-brands fa-linkedin" title="Linkedin"></i>
                     </a>
-                    <a href="https://github.com/Flipe124">
+                    <a href="https://github.com/Flipe124" target="_blank">
                         <i class="fa-brands fa-github" title="Github"></i>
                     </a>
-                    <a href="https://gitlab.com/Flipe124">
+                    <a href="https://gitlab.com/Flipe124" target="_blank">
                         <i class="fa-brands fa-gitlab" title="Gitlab"></i>
                     </a>
                 </div>
