--- a/index.html
+++ b/index.html
@@ -27,13 +27,10 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Início</a>
+                            <a class="nav-link active" aria-current="page" href="#apresentation">Início</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Sobre</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contatos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#project">Projetos</a>
@@ -44,10 +41,11 @@
         </nav>
     </header>
     <main>
-        <section class="apresentation my-padding">
+        <section class="apresentation my-padding" id="apresentation">
             <div class="half mt-5">
                 <b class="fs-2">Desenvolvedor frontend</b>
-                <p class="fs-6">Olá, me chamo Felipe Oliveira sou formado em análise e desenvolvimento de sistemas UMFG (2023).</p>
+                <p class="fs-6">Olá, me chamo Felipe Oliveira sou formado em análise e desenvolvimento de sistemas UMFG
+                    (2023).</p>
                 <div class="social">
                     <a href="https://www.linkedin.com/in/felipe-oliveira-dos-santos-morais-a016991b9/" target="_blank">
                         <i class="fa-brands fa-linkedin" title="Linkedin"></i>
@@ -74,73 +72,16 @@
                 <i class="fas fa-cogs" title="Jquery"></i>
             </div>
         </section>
-        <!-- <section class="apresentation bg-success">
-            <div class="half">
-                <p class="fs-4">- OLÁ</p>
-                <p class="fs-1">Me chamo <b class="text-danger">Felipe</b> Oliveira</p>
-                <p class="fs-6">Sou desenvolvedor web, me formei em análise e desenvolvimento de sistemas na
-                    UMFG (2023).</p>
-                <button class="btn btn-success"><b>BAIXAR CV</b></button>
-            </div>
-        </section> -->
+        <section class="project" id="project">
 
-        <!-- <div class="container bg-danger">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="">
-                        <p class="fs-4">- OLÁ</p>
-                        <p class="fs-1">Me chamo <b class="text-danger">Felipe</b> Oliveira</p>
-                        <p class="fs-6">Sou desenvolvedor web, me formei em análise e desenvolvimento de sistemas na
-                            UMFG (2023).</p>
-                        <button class="btn btn-success"><b>BAIXAR CV</b></button>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="text-center">
-                        <img id="my-image" src="./img/foto_perfil.jpg">
-                    </div>
-                </div>
-                <div class="col-md-12" id="project">
-                    <h3 class="text-center">Projetos</h3>
-                    <div class="card-project">
-                        teste1
-                    </div>
-                    <div class="card-project">
-                        teste2
-                    </div>
-                    <div class="card-project">
-                        teste3
-                    </div>
-                    <div class="card-project">
-                        teste3
-                    </div>
-                </div>
-                <div class="col-md-12">
-                    <h3 class="text-center">Social</h3>
-                    <div class="text-center mt-3">
-                        <a class="p-2"
-                            href="https://www.linkedin.com/in/felipe-oliveira-dos-santos-morais-a016991b9/"><i
-                                class="fa-brands fa-linkedin fs-1"></i></a>
-                        <a class="p-2" href="https://github.com/Flipe124"><i
-                                class="fa-brands fa-github text-dark fs-1"></i></a>
-                        <a class="p-2" href="https://gitlab.com/Flipe124"><i
-                                class="fa-brands fa-gitlab text-warning fs-1"></i></a>
-                    </div>
-                </div>
-                <div class="col-md-12">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi dolorum molestias, dolore est totam
-                    magnam beatae numquam cupiditate expedita praesentium esse, modi nam amet in doloremque, placeat
-                    iure natus tempore?
-                </div>
-            </div>
-        </div>
-    </main> -->
+        </section>
+    </main>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-            crossorigin="anonymous"></script>
-        <script src="./script/navbar.js"></script>
-        <script src="https://kit.fontawesome.com/1abad94d22.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
+    <script src="./script/navbar.js"></script>
+    <script src="https://kit.fontawesome.com/1abad94d22.js" crossorigin="anonymous"></script>
 
 </body>
 
