add: elementos para projetos

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary" style="padding-right: 7%; padding-left: 7%;">
+        <nav class="navbar navbar-expand-lg" style="padding-right: 7%; padding-left: 7%;">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">FOSM</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -43,9 +43,10 @@
     <main>
         <section class="apresentation my-padding" id="apresentation">
             <div class="half mt-5">
-                <b class="fs-2">Desenvolvedor frontend</b>
-                <p class="fs-6">Olá, me chamo Felipe Oliveira sou formado em análise e desenvolvimento de sistemas UMFG
-                    (2023).</p>
+                <h1>Desenvolvedor frontend</h1>
+                <p class="fs-6">Olá, me chamo <b>Felipe Oliveira</b> sou formado em análise e desenvolvimento de sistemas UMFG
+                    (2023).
+                </p>
                 <div class="social">
                     <a href="https://www.linkedin.com/in/felipe-oliveira-dos-santos-morais-a016991b9/" target="_blank">
                         <i class="fa-brands fa-linkedin" title="Linkedin"></i>
@@ -73,7 +74,14 @@
             </div>
         </section>
         <section class="project" id="project">
-
+            <h1>Projetos</h1>
+            <div class="projects">
+                <div class="show-project">
+                    <img src="https://img.freepik.com/vetores-gratis/laptop-com-icone-de-codigo-isometrico-de-programa-desenvolvimento-de-software-e-aplicacoes-de-programacao-neon-escuro_39422-971.jpg?w=826&t=st=1691456131~exp=1691456731~hmac=30f89daef8bdffbfd4755640f3419295fb223f390610d0fb4f7796aa4f6966dc" alt="">
+                    <h3>Titulo do projeto</h3>
+                    <p>Breve descrição sobre o projeto.</p>
+                </div>
+            </div>
         </section>
     </main>
 
