--- a/index.html
+++ b/index.html
@@ -62,19 +62,21 @@
             </div>
             <div class="half">
                 <div class="text-center flutuar">
-                    <img id="my-image" src="./img/foto_perfil.jpg">
+                    <img id="my-image" src="./img/Developer activity-amico.png">
                 </div>
             </div>
             <div class="skill">
-                <i class="fa-brands fa-html5" title="HTML5"></i>
-                <i class="fa-brands fa-css3-alt" title="CSS3"></i>
+                <i class="fa-brands fa-html5" title="HTML"></i>
+                <i class="fa-brands fa-css3-alt" title="CSS"></i>
                 <i class="fa-brands fa-square-js" title="Javascript"></i>
                 <i class="fa-brands fa-bootstrap" title="Bootstrap"></i>
                 <i class="fas fa-cogs" title="Jquery"></i>
+                <i class="fa-brands fa-figma" title="Figma"></i>
             </div>
         </section>
         <section class="project" id="project">
             <h1>Projetos</h1>
+            <br></br>
             <div class="projects">
                 <div class="show-project">
                     <img src="https://img.freepik.com/vetores-gratis/laptop-com-icone-de-codigo-isometrico-de-programa-desenvolvimento-de-software-e-aplicacoes-de-programacao-neon-escuro_39422-971.jpg?w=826&t=st=1691456131~exp=1691456731~hmac=30f89daef8bdffbfd4755640f3419295fb223f390610d0fb4f7796aa4f6966dc" alt="">
