mod elementos de apresentação de projetos

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         <section class="apresentation my-padding" id="apresentation">
             <div class="half mt-5">
                 <h1>Desenvolvedor frontend</h1>
-                <p class="fs-6">Olá, me chamo <b>Felipe Oliveira</b> sou formado em análise e desenvolvimento de sistemas UMFG
+                <p class="fs-6">Olá, me chamo <b>Felipe Oliveira</b> sou formado em análise e desenvolvimento de
+                    sistemas UMFG
                     (2023).
                 </p>
                 <div class="social">
@@ -76,13 +77,44 @@
         </section>
         <section class="project" id="project">
             <h1>Projetos</h1>
-            <br></br>
             <div class="projects">
+                <div class="show-project-img">
+                    <div class="project-img">
+                        <img src="./img/OPENFINANCE.jpg" alt="">
+                    </div>
+                </div>
+                <div class="show-project-img">
+                    <div class="project-img">
+                        <img src="./img/RECONHECIMENTO DE VOZ.jpg" alt="">
+                    </div>
+                </div>
+                <div class="show-project-img">
+                    <div class="project-img">
+                        <img src="./img/API GITHUB.jpg" alt="">
+                    </div>
+                </div>
+                <!-- <div class="show-project">
+                    <img src="./img/interface-openfinance.png" alt="">
+                    <h3>Openfinance</h3>
+                    <p>Site para gerenciamento de finanças pessoais.</p>
+                    <p class="skill-used">
+                        <i class="fa-brands fa-html5" title="HTML"></i>
+                        <i class="fa-brands fa-css3-alt" title="CSS"></i>
+                        <i class="fa-brands fa-square-js" title="Javascript"></i>
+                    </p>
+                </div>
                 <div class="show-project">
-                    <img src="https://img.freepik.com/vetores-gratis/laptop-com-icone-de-codigo-isometrico-de-programa-desenvolvimento-de-software-e-aplicacoes-de-programacao-neon-escuro_39422-971.jpg?w=826&t=st=1691456131~exp=1691456731~hmac=30f89daef8bdffbfd4755640f3419295fb223f390610d0fb4f7796aa4f6966dc" alt="">
-                    <h3>Titulo do projeto</h3>
+                    <img src="https://github.com/Flipe124/projeto_reconhecimento_de_voz_js/raw/master/img/interface.png"
+                        alt="">
+                    <h3>Reconhecimento de voz</h3>
                     <p>Breve descrição sobre o projeto.</p>
                 </div>
+                <div class="show-project">
+                    <img src="https://github.com/Flipe124/atividade-lambda/blob/master/img/Interface.png?raw=true"
+                        alt="">
+                    <h3>Lambda GitHub</h3>
+                    <p>Consumindo uma API do GitHub para apresentar a quatidade de seguidores de um perfil.</p>
+                </div> -->
             </div>
         </section>
     </main>
