add new elements

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                 <i class="fa-brands fa-square-js" title="Javascript"></i>
                 <i class="fa-brands fa-bootstrap" title="Bootstrap"></i>
                 <i class="fas fa-cogs" title="Jquery"></i>
+                <i class="fa-brands fa-git-alt"></i>
                 <i class="fa-brands fa-figma" title="Figma"></i>
             </div>
         </section>
@@ -80,17 +81,23 @@
             <div class="projects">
                 <div class="show-project-img">
                     <div class="project-img">
-                        <img src="./img/OPENFINANCE.jpg" alt="">
+                        <img src="./img/openfinance-full.jpg" alt="" data-tooltip="Bom dia">
+                    </div>
+                    <div class="description-project">
+                        <!-- <p class="title">OPENFINANCE</p>
+                        <p>Sistema de gerenciamento financeiro pessoal.</p>
+                        <span class="language">HTML</span>
+                        <span class="language">CSS</span> -->
                     </div>
                 </div>
                 <div class="show-project-img">
                     <div class="project-img">
-                        <img src="./img/RECONHECIMENTO DE VOZ.jpg" alt="">
+                        <img src="./img/reconhecimento-de-voz-full.jpg" alt="">
                     </div>
                 </div>
                 <div class="show-project-img">
                     <div class="project-img">
-                        <img src="./img/API GITHUB.jpg" alt="">
+                        <img src="./img/api-github-full.jpg" alt="">
                     </div>
                 </div>
                 <!-- <div class="show-project">
