--- a/index.html
+++ b/index.html
@@ -124,6 +124,11 @@
                 </div> -->
             </div>
         </section>
+        <section class="certification">
+            <h2>Certificados</h2>
+            <div class="show-certification">
+            </div>
+        </section>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
