add elements certification

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/navbar.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/apresentation.css">
+    <link rel="stylesheet" href="./css/certification.css">
     <link rel="stylesheet" href="./css/project.css">
 </head>
 
@@ -125,9 +126,49 @@
             </div>
         </section>
         <section class="certification">
-            <h2>Certificados</h2>
+            <h2>Certificados</h1>
+            <h6><b>Formação Acadêmica</b></h6>
             <div class="show-certification">
+                <div class="img">
+                    <img src="./img/logotipo-umfg.jpg" alt="">
+                </div>
+                <div class="title">
+                    <h6><b>Análise e Desenvolvimento de Sistemas</b></h6>
+                    <span>UMFG</span>
+                </div>
             </div>
+            <div class="line"></div>
+            <h6><b>Certificados</b></h6>
+            <div class="show-certification">
+                <div class="img">
+                    <img src="./img/logotipo-umfg.jpg" alt="">
+                </div>
+                <div class="title">
+                    <h6><b>Oficina de GitHub</b></h6>
+                    <span>UMFG</span>
+                </div>
+            </div>
+            <div class="line line-small"></div>
+            <div class="show-certification">
+                <div class="img">
+                    <img src="./img/logotipo-umfg.jpg" alt="">
+                </div>
+                <div class="title">
+                    <h6><b>Minicurso de Aplicação Web</b></h6>
+                    <span>UMFG</span>
+                </div>
+            </div>
+            <div class="line line-small"></div>
+            <div class="show-certification">
+                <div class="img">
+                    <img src="./img/logotipo-ifto.jpg" alt="">
+                </div>
+                <div class="title">
+                    <h6><b>Administrador de Banco de Dados</b></h6>
+                    <span>IFTO</span>
+                </div>
+            </div>
+            <div class="line line-small"></div>
         </section>
     </main>
 
