--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                             <a class="nav-link active" aria-current="page" href="#apresentation">Início</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Sobre</a>
+                            <a class="nav-link" href="#project">Projetos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#project">Projetos</a>
+                            <a class="nav-link" href="#certification">Certificados</a>
                         </li>
                     </ul>
                 </div>
@@ -125,50 +125,50 @@
                 </div> -->
             </div>
         </section>
-        <section class="certification">
+        <section class="certification" id="certification">
             <h2>Certificados</h1>
-            <h6><b>Formação Acadêmica</b></h6>
-            <div class="show-certification">
-                <div class="img">
-                    <img src="./img/logotipo-umfg.jpg" alt="">
+                <h6><b>Formação Acadêmica</b></h6>
+                <div class="show-certification">
+                    <div class="img">
+                        <img src="./img/logotipo-umfg.jpg" alt="">
+                    </div>
+                    <div class="title">
+                        <h6><b>Análise e Desenvolvimento de Sistemas</b></h6>
+                        <span>UMFG</span>
+                    </div>
                 </div>
-                <div class="title">
-                    <h6><b>Análise e Desenvolvimento de Sistemas</b></h6>
-                    <span>UMFG</span>
+                <div class="line"></div>
+                <h6><b>Certificados</b></h6>
+                <div class="show-certification">
+                    <div class="img">
+                        <img src="./img/logotipo-umfg.jpg" alt="">
+                    </div>
+                    <div class="title">
+                        <h6><b>Oficina de GitHub</b></h6>
+                        <span>UMFG</span>
+                    </div>
                 </div>
-            </div>
-            <div class="line"></div>
-            <h6><b>Certificados</b></h6>
-            <div class="show-certification">
-                <div class="img">
-                    <img src="./img/logotipo-umfg.jpg" alt="">
+                <div class="line line-small"></div>
+                <div class="show-certification">
+                    <div class="img">
+                        <img src="./img/logotipo-umfg.jpg" alt="">
+                    </div>
+                    <div class="title">
+                        <h6><b>Minicurso de Aplicação Web</b></h6>
+                        <span>UMFG</span>
+                    </div>
                 </div>
-                <div class="title">
-                    <h6><b>Oficina de GitHub</b></h6>
-                    <span>UMFG</span>
+                <div class="line line-small"></div>
+                <div class="show-certification">
+                    <div class="img">
+                        <img src="./img/logotipo-ifto.jpg" alt="">
+                    </div>
+                    <div class="title">
+                        <h6><b>Administrador de Banco de Dados</b></h6>
+                        <span>IFTO</span>
+                    </div>
                 </div>
-            </div>
-            <div class="line line-small"></div>
-            <div class="show-certification">
-                <div class="img">
-                    <img src="./img/logotipo-umfg.jpg" alt="">
-                </div>
-                <div class="title">
-                    <h6><b>Minicurso de Aplicação Web</b></h6>
-                    <span>UMFG</span>
-                </div>
-            </div>
-            <div class="line line-small"></div>
-            <div class="show-certification">
-                <div class="img">
-                    <img src="./img/logotipo-ifto.jpg" alt="">
-                </div>
-                <div class="title">
-                    <h6><b>Administrador de Banco de Dados</b></h6>
-                    <span>IFTO</span>
-                </div>
-            </div>
-            <div class="line line-small"></div>
+                <div class="line line-small"></div>
         </section>
     </main>
 
