--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                         <i class="fa-brands fa-linkedin" title="Linkedin"></i>
                     </a>
                     <a href="https://github.com/Flipe124" target="_blank">
-                        <i class="fa-brands fa-github" title="Github"></i>
+                        <i class="fa-brands fa-github" title="GitHub"></i>
                     </a>
                     <a href="https://gitlab.com/Flipe124" target="_blank">
-                        <i class="fa-brands fa-gitlab" title="Gitlab"></i>
+                        <i class="fa-brands fa-gitlab" title="GitLab"></i>
                     </a>
                 </div>
                 <!-- <button class="btn btn-success"><b>BAIXAR CV</b></button> -->
@@ -73,7 +73,7 @@
                 <i class="fa-brands fa-square-js" title="Javascript"></i>
                 <i class="fa-brands fa-bootstrap" title="Bootstrap"></i>
                 <i class="fas fa-cogs" title="Jquery"></i>
-                <i class="fa-brands fa-git-alt"></i>
+                <i class="fa-brands fa-git-alt" title="Git"></i>
                 <i class="fa-brands fa-figma" title="Figma"></i>
             </div>
         </section>
@@ -101,28 +101,6 @@
                         <img src="./img/api-github-full.jpg" alt="">
                     </div>
                 </div>
-                <!-- <div class="show-project">
-                    <img src="./img/interface-openfinance.png" alt="">
-                    <h3>Openfinance</h3>
-                    <p>Site para gerenciamento de finanças pessoais.</p>
-                    <p class="skill-used">
-                        <i class="fa-brands fa-html5" title="HTML"></i>
-                        <i class="fa-brands fa-css3-alt" title="CSS"></i>
-                        <i class="fa-brands fa-square-js" title="Javascript"></i>
-                    </p>
-                </div>
-                <div class="show-project">
-                    <img src="https://github.com/Flipe124/projeto_reconhecimento_de_voz_js/raw/master/img/interface.png"
-                        alt="">
-                    <h3>Reconhecimento de voz</h3>
-                    <p>Breve descrição sobre o projeto.</p>
-                </div>
-                <div class="show-project">
-                    <img src="https://github.com/Flipe124/atividade-lambda/blob/master/img/Interface.png?raw=true"
-                        alt="">
-                    <h3>Lambda GitHub</h3>
-                    <p>Consumindo uma API do GitHub para apresentar a quatidade de seguidores de um perfil.</p>
-                </div> -->
             </div>
         </section>
         <section class="certification" id="certification">
@@ -134,7 +112,7 @@
                     </div>
                     <div class="title">
                         <h6><b>Análise e Desenvolvimento de Sistemas</b></h6>
-                        <span>UMFG</span>
+                        <span>UMFG - 2023</span>
                     </div>
                 </div>
                 <div class="line"></div>
@@ -145,7 +123,7 @@
                     </div>
                     <div class="title">
                         <h6><b>Oficina de GitHub</b></h6>
-                        <span>UMFG</span>
+                        <span>UMFG - 2022</span>
                     </div>
                 </div>
                 <div class="line line-small"></div>
@@ -155,7 +133,7 @@
                     </div>
                     <div class="title">
                         <h6><b>Minicurso de Aplicação Web</b></h6>
-                        <span>UMFG</span>
+                        <span>UMFG - 2021</span>
                     </div>
                 </div>
                 <div class="line line-small"></div>
@@ -165,10 +143,10 @@
                     </div>
                     <div class="title">
                         <h6><b>Administrador de Banco de Dados</b></h6>
-                        <span>IFTO</span>
+                        <span>IFTO - 2020</span>
                     </div>
                 </div>
-                <div class="line line-small"></div>
+                <!-- <div class="line line-small"></div> -->
         </section>
     </main>
 
