add new element section footer

--- a/index.html
+++ b/index.html
@@ -84,17 +84,14 @@
                     <div class="project-img">
                         <img src="./img/openfinance-full.jpg" alt="" data-tooltip="Bom dia">
                     </div>
-                    <div class="description-project">
-                        <!-- <p class="title">OPENFINANCE</p>
-                        <p>Sistema de gerenciamento financeiro pessoal.</p>
-                        <span class="language">HTML</span>
-                        <span class="language">CSS</span> -->
-                    </div>
                 </div>
                 <div class="show-project-img">
-                    <div class="project-img">
+                    <span class="project-img">
                         <img src="./img/reconhecimento-de-voz-full.jpg" alt="">
-                    </div>
+                    </span>
+                    <span>
+                        Texto de exmplo
+                    </span>
                 </div>
                 <div class="show-project-img">
                     <div class="project-img">
@@ -147,6 +144,11 @@
                     </div>
                 </div>
                 <!-- <div class="line line-small"></div> -->
+
+        </section>
+        <section class="footer">
+            <div class="line-full"></div>
+            <div class="dev">Desenvolvido por <b>Felipe Oliveira</b></div>
         </section>
     </main>
 
