add new elements on project

--- a/index.html
+++ b/index.html
@@ -84,19 +84,31 @@
                     <div class="project-img">
                         <img src="./img/openfinance-full.jpg" alt="" data-tooltip="Bom dia">
                     </div>
+                    <span class="text-span">
+                        <h3>Openfinance</h3>
+                        <p>Sistema de gerenciamento de finanças pessoais.</p>
+                        <a class="btn-access-project" href="">Acessar <i class="fa-solid fa-caret-right"></i></a>
+                    </span>
                 </div>
                 <div class="show-project-img">
                     <span class="project-img">
                         <img src="./img/reconhecimento-de-voz-full.jpg" alt="">
                     </span>
-                    <span>
-                        Texto de exmplo
+                    <span class="text-span">
+                        <h3>Reconhecimento de voz</h3>
+                        <p>Sistema de reconhecimento de voz com Javascript.</p>
+                        <a class="btn-access-project" href="">Acessar <i class="fa-solid fa-caret-right"></i></a>
                     </span>
                 </div>
                 <div class="show-project-img">
                     <div class="project-img">
                         <img src="./img/api-github-full.jpg" alt="">
                     </div>
+                    <span class="text-span">
+                        <h3>API GitHub</h3>
+                        <p>Consumo de API do GitHub para apresentar quantidade de seguidores de um usuário</p>
+                        <a class="btn-access-project" href="">Acessar <i class="fa-solid fa-caret-right"></i></a>
+                    </span>
                 </div>
             </div>
         </section>
