--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
                     </span>
                 </div>
                 <div class="show-project-img">
-                    <span class="text-span">
+                    <span class="text-span position-1">
                         <h3><b>RECONHECIMENTO DE VOZ</b></h3>
                         <p>Sistema de reconhecimento de voz com Javascript.</p>
                         <a class="btn-access-project" href="" target="_blank">Acessar <i class="fa-solid fa-caret-right"></i></a>
                     </span>
-                    <span class="project-img reverse-project-img">
+                    <span class="project-img reverse-project-img position-2">
                         <img src="./img/reconhecimento-de-voz-full.jpg" alt="" >
                     </span>
                 </div>
