--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
                     <span class="text-span">
                         <h3><b>OPENFINANCE</b></h3>
                         <p>Sistema de gerenciamento de finanças pessoais.</p>
-                        <a class="btn-access-project" href="" target="_blank">Acessar <i class="fa-solid fa-caret-right"></i></a>
+                        <a class="btn-access-project" href="https://github.com/Flipe124/estagio-supervisionado" target="_blank">Acessar <i class="fa-solid fa-caret-right"></i></a>
                     </span>
                 </div>
                 <div class="show-project-img">
                     <span class="text-span position-1">
                         <h3><b>RECONHECIMENTO DE VOZ</b></h3>
                         <p>Sistema de reconhecimento de voz com Javascript.</p>
-                        <a class="btn-access-project" href="" target="_blank">Acessar <i class="fa-solid fa-caret-right"></i></a>
+                        <a class="btn-access-project" href="https://reconhecimento-de-voz.netlify.app/" target="_blank">Acessar <i class="fa-solid fa-caret-right"></i></a>
                     </span>
                     <span class="project-img reverse-project-img position-2">
                         <img src="./img/reconhecimento-de-voz-full.jpg" alt="" >
@@ -107,7 +107,7 @@
                     <span class="text-span">
                         <h3><b>API GITHUB</b></h3>
                         <p>Consumo de API do GitHub para apresentar quantidade de seguidores de um usuário</p>
-                        <a class="btn-access-project" href="https://github.com/Flipe124/atividade-lambda" target="_blank">Acessar <i class="fa-solid fa-caret-right"></i></a>
+                        <a class="btn-access-project" href="https://southamerica-east1-lambda-js.cloudfunctions.net/lambdaJs" target="_blank">Acessar <i class="fa-solid fa-caret-right"></i></a>
                     </span>
                 </div>
             </div>
