add new elements for tooltip in skill

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
         <section class="apresentation my-padding" id="apresentation">
             <div class="half mt-5">
                 <h1>DESENVOLVEDOR FRONTEND</h1>
-                <p style="color: rgb(221, 221, 221);">Olá, me chamo <b>Felipe Oliveira</b> sou formado em análise e desenvolvimento de
+                <p style="color: rgb(221, 221, 221);">Olá, me chamo <b>Felipe Oliveira</b> sou formado em análise e
+                    desenvolvimento de
                     sistemas UMFG
                     (2023).
                 </p>
@@ -68,13 +69,34 @@
                 </div>
             </div>
             <div class="skill">
-                <i class="fa-brands fa-html5" title="HTML"></i>
-                <i class="fa-brands fa-css3-alt" title="CSS"></i>
-                <i class="fa-brands fa-square-js" title="Javascript"></i>
-                <i class="fa-brands fa-bootstrap" title="Bootstrap"></i>
-                <i class="fas fa-cogs" title="Jquery"></i>
-                <i class="fa-brands fa-git-alt" title="Git"></i>
-                <i class="fa-brands fa-figma" title="Figma"></i>
+                <span class="tooltip">
+                    <i class="fa-brands fa-html5" title="HTML"></i>
+                    <span class="tooltiptext">HTML</span>
+                </span>
+                <span class="tooltip">
+                    <i class="fa-brands fa-css3-alt" title="CSS"></i>
+                    <span class="tooltiptext">CSS</span>
+                </span>
+                <span class="tooltip">
+                    <i class="fa-brands fa-square-js" title="Javascript"></i>
+                    <span class="tooltiptext">JavaScript</span>
+                </span>
+                <span class="tooltip">
+                    <i class="fa-brands fa-bootstrap" title="Bootstrap"></i>
+                    <span class="tooltiptext">Bootstrap</span>
+                </span>
+                <span class="tooltip">
+                    <i class="fas fa-cogs" title="Jquery"></i>
+                    <span class="tooltiptext">Jquery</span>
+                </span>
+                <span class="tooltip">
+                    <i class="fa-brands fa-git-alt" title="Git"></i>
+                    <span class="tooltiptext">Git</span>
+                </span>
+                <span class="tooltip">
+                    <i class="fa-brands fa-figma" title="Figma"></i>
+                    <span class="tooltiptext">Figma</span>
+                </span>
             </div>
         </section>
         <section class="project" id="project">
@@ -87,17 +109,19 @@
                     <span class="text-span">
                         <h3><b>OPENFINANCE</b></h3>
                         <p>Sistema de gerenciamento de finanças pessoais.</p>
-                        <a class="btn-access-project" href="https://github.com/Flipe124/estagio-supervisionado" target="_blank">Acessar <i class="fa-solid fa-caret-right"></i></a>
+                        <a class="btn-access-project" href="https://github.com/Flipe124/estagio-supervisionado"
+                            target="_blank">Acessar <i class="fa-solid fa-caret-right"></i></a>
                     </span>
                 </div>
                 <div class="show-project-img">
                     <span class="text-span position-1">
                         <h3><b>RECONHECIMENTO DE VOZ</b></h3>
                         <p>Sistema de reconhecimento de voz com Javascript.</p>
-                        <a class="btn-access-project" href="https://reconhecimento-de-voz.netlify.app/" target="_blank">Acessar <i class="fa-solid fa-caret-right"></i></a>
+                        <a class="btn-access-project" href="https://reconhecimento-de-voz.netlify.app/"
+                            target="_blank">Acessar <i class="fa-solid fa-caret-right"></i></a>
                     </span>
                     <span class="project-img reverse-project-img position-2">
-                        <img src="./img/reconhecimento-de-voz-full.jpg" alt="" >
+                        <img src="./img/reconhecimento-de-voz-full.jpg" alt="">
                     </span>
                 </div>
                 <div class="show-project-img">
@@ -107,7 +131,9 @@
                     <span class="text-span">
                         <h3><b>API GITHUB</b></h3>
                         <p>Consumo de API do GitHub para apresentar quantidade de seguidores de um usuário</p>
-                        <a class="btn-access-project" href="https://southamerica-east1-lambda-js.cloudfunctions.net/lambdaJs" target="_blank">Acessar <i class="fa-solid fa-caret-right"></i></a>
+                        <a class="btn-access-project"
+                            href="https://southamerica-east1-lambda-js.cloudfunctions.net/lambdaJs"
+                            target="_blank">Acessar <i class="fa-solid fa-caret-right"></i></a>
                     </span>
                 </div>
             </div>
@@ -168,6 +194,7 @@
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
     <script src="./script/navbar.js"></script>
+    <script src="./script/apresentation.js"></script>
     <script src="https://kit.fontawesome.com/1abad94d22.js" crossorigin="anonymous"></script>
 
 </body>
