mod navbar-brand

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <header>
         <nav class="navbar navbar-expand-lg" style="padding-right: 7%; padding-left: 7%;">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">FOSM</a>
+                <a class="navbar-brand" href="#">
+                    <i class="fas fa-laptop-code"></i>
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-expanded="false">
                     <span class="navbar-toggler-icon"></span>
