--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#apresentation">Início</a>
+                            <a class="nav-link active" aria-current="page" href="#">Início</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="#project">Projetos</a>
