mod project details

--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
                 </div>
                 <div class="show-project-img">
                     <span class="text-span position-1">
-                        <h3><b>RECONHECIMENTO DE VOZ</b></h3>
-                        <p>Sistema de reconhecimento de voz com Javascript.</p>
-                        <a class="btn-access-project" href="https://reconhecimento-de-voz.netlify.app/"
+                        <h3><b>NatureShop</b></h3>
+                        <p>Loja de produtos naturais.</p>
+                        <a class="btn-access-project" href="https://"
                             target="_blank">Acessar <i class="fa-solid fa-caret-right"></i></a>
                     </span>
                     <span class="project-img reverse-project-img position-2">
-                        <img src="./img/reconhecimento-de-voz-full.jpg" alt="">
+                        <img src="./img/natureshop.png" alt="">
                     </span>
                 </div>
                 <div class="show-project-img">
