add new div tech used

--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
                     <span class="tooltiptext">JavaScript</span>
                 </span>
                 <span class="tooltip">
+                    <i class="fa-brands fa-php"></i>
+                    <span class="tooltiptext">PHP</span>
+                </span>
+                <span class="tooltip">
                     <i class="fa-brands fa-bootstrap" title="Bootstrap"></i>
                     <span class="tooltiptext">Bootstrap</span>
                 </span>
@@ -111,16 +115,30 @@
                     <span class="text-span">
                         <h3><b>OPENFINANCE</b></h3>
                         <p>Sistema de gerenciamento de finanças pessoais.</p>
+                        <div class="tech-used">
+                            <i class="fa-brands fa-html5" title="HTML"></i>
+                            <i class="fa-brands fa-css3-alt" title="CSS"></i>
+                            <i class="fa-brands fa-square-js" title="Javascript"></i>
+                            <i class="fa-brands fa-bootstrap" title="Bootstrap"></i>
+                            <i class="fas fa-cogs" title="Jquery"></i>
+                        </div>
                         <a class="btn-access-project" href="https://github.com/Flipe124/estagio-supervisionado"
-                            target="_blank">Acessar <i class="fa-solid fa-caret-right"></i></a>
+                            target="_blank">Acessar <i class="fa-solid fa-caret-right"></i>
+                        </a>
                     </span>
                 </div>
                 <div class="show-project-img">
                     <span class="text-span position-1">
                         <h3><b>NatureShop</b></h3>
                         <p>Loja de produtos naturais.</p>
-                        <a class="btn-access-project" href="https://"
-                            target="_blank">Acessar <i class="fa-solid fa-caret-right"></i></a>
+                        <div class="tech-used">
+                            <i class="fa-brands fa-html5" title="HTML"></i>
+                            <i class="fa-brands fa-css3-alt" title="CSS"></i>
+                            <i class="fa-brands fa-square-js" title="Javascript"></i>
+                            <i class="fa-brands fa-bootstrap" title="Bootstrap"></i>
+                        </div>
+                        <a class="btn-access-project" href="https://" target="_blank">Acessar <i
+                                class="fa-solid fa-caret-right"></i></a>
                     </span>
                     <span class="project-img reverse-project-img position-2">
                         <img src="./img/natureshop.png" alt="">
@@ -133,6 +151,12 @@
                     <span class="text-span">
                         <h3><b>API GITHUB</b></h3>
                         <p>Consumo de API do GitHub para apresentar quantidade de seguidores de um usuário</p>
+                        <div class="tech-used">
+                            <i class="fa-brands fa-html5" title="HTML"></i>
+                            <i class="fa-brands fa-css3-alt" title="CSS"></i>
+                            <i class="fa-brands fa-square-js" title="Javascript"></i>
+                            <i class="fa-brands fa-bootstrap" title="Bootstrap"></i>
+                        </div>
                         <a class="btn-access-project"
                             href="https://southamerica-east1-lambda-js.cloudfunctions.net/lambdaJs"
                             target="_blank">Acessar <i class="fa-solid fa-caret-right"></i></a>
